Get rid of ImmutableList.of in sal-rest-docgen
Replaced guava’s ImmutableList.of with java’s List.of
in sal-rest-docgen package.

JIRA: NETCONF-1008
Change-Id: Iefa7a20432fbbabda8d67e2166f658bacfe75eb8
Signed-off-by: OleksandrZharov <Oleksandr.Zharov@pantheon.tech>
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>